podVolume.yaml
apiVersion: v1
kind: Pod
metadata:
    name: myboot-demo
spec:
    containers:
        - name: myboot-demo
          image: quay.io/rhdevelopers/myboot:v4

          volumeMounts:
              - mountPath: /tmp/demo
                name: demo-volume

    volumes:
        - name: demo-volume
          persistentVolumeClaim:
              claimName: myboot-volumeclaim
