department-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: department-service-app
    labels:
        app: department-service-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: department-service-app
    template:
        metadata:
            labels:
                app: department-service-app
        spec:
            containers:
                - name: department-service-app
                  image: dailycodebuffer/department-service:0.0.1
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 9001

---
apiVersion: v1
kind: Service
metadata:
    name: department-service-svc
spec:
    ports:
        - targetPort: 9001
          port: 80
    selector:
        app: department-service-app
