nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: clusterip-svc
spec:
    type: NodePort
    selector:
        app: my-nginx
    ports:
        - protocol: TCP
          nodePort: 31234
          port: 80
          targetPort: 80
